# python-template

./: .gitignore  LICENSE  README.md  cookiecutter.json  copier.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: __template.yml  _template.yml  _test.yml  ci.yml  docs.yml  main.yml  publish.yml  template.yml
extensions/: context.py
hooks/: post_gen_project.py
template/{{ project_name }}/: pyproject.toml.jinja
template/{{ project_name }}/.github/workflows/: main.yml.jinja
template/{{ project_slug }}/: .pre-commit-config.yaml  LICENSE.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
template/{{ project_slug }}/.github/workflows/: docs.yml.jinja  main.yml.jinja  publish.yml.jinja
template/{{ project_slug }}/docs/: index.md
template/{{ project_slug }}/tests/: test_smoke.py.jinja
template/{{ project_slug }}/{{ package }}/: {% if cli %}__main__.py{% endif %}.jinja
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  build.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_slug }}/.github/: FUNDING.yaml  FUNDING.yml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  deploy-docs.yml  latest-changes.yml  lint.yml  main.yml  publish.yml  release.yml  test.yml
{{ cookiecutter.project_slug }}/tests/: test_smoke.py  test_version.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package }}/: __init__.py
{{ project_name }}/: pyproject.toml.jinja
{{ project_name }}/tests/: test_smoke.py.jinja
