[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
license-files = ["LICENSE"]
package-data = { "{{ cookiecutter.package }}" = ["py.typed"] }
include-package-data = true
zip-safe = false

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github }}/{{ cookiecutter.project_slug }}"
Source = "https://github.com/{{ cookiecutter.github }}/{{ cookiecutter.project_slug }}"
Twitter = "https://twitter.com/{{ cookiecutter.twitter }}"

[tool.mypy]
strict = true
show_error_codes = true
