[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
requires-python = ">=3.7"
dependencies = []
optional-dependencies = {}

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github }}/{{ cookiecutter.project_slug }}"
Source = "https://github.com/{{ cookiecutter.github }}/{{ cookiecutter.project_slug }}"
Twitter = "https://twitter.com/{{ cookiecutter.twitter }}"
Funding = 'https://github.com/sponsors/{{ cookiecutter.github }}'

[tool.mypy]
strict = true
show_error_codes = true

[tool.flake8]
statistics = true
max-line-length = 88
ignore = ["E203", "E501", "W503"]
per-file-ignores = ["__init__.py:F401"]

[tool.black]
target-version = ["py37"]

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
source_pkgs = ["{{ cookiecutter.package }}", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
