[metadata]
name = {{ cookiecutter.project_slug }}
version = 0.1.0
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github }}/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Twitter = https://twitter.com/{{ cookiecutter.twitter }}

[options]
packages = find:
include_package_data = True
install_requires =
python_requires = >=3.8.0

[flake8]
statistics = True
max-line-length = 88
ignore = E203,E501,W503
