[metadata]
name = {{ cookiecutter.project_slug }}
version = 0.1.0
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github }}/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Twitter = https://twitter.com/{{ cookiecutter.twitter }}

[options]
packages = find:
include_package_data = True
install_requires =
python_requires = >=3.7

[options.extras_require]
test =
    coverage[toml] >= 6.2
    pytest >= 6.2.5

[flake8]
statistics = True
max-line-length = 88
ignore = E203,E501,W503

[coverage:run]
branch = True
parallel=True
source_pkgs = {{ cookiecutter.package }}, tests

[coverage:report]
show_missing = True
skip_covered = True
